@@ -2,8 +2,10 @@ import java.io.IOException;
 import java.nio.file.*;
 import java.util.HashMap;
 import java.util.Map;
+import java.util.stream.Collectors;
 
-public class AuthenticationManager {
+class AuthenticationManager {
+    private static final Logger logger = Logger.getLogger(AuthenticationManager.class.getName());
     private static final String USER_FILE = "users.txt";
     private static Map<String, String> userCredentials; // Username to password mapping
 
@@ -17,14 +19,24 @@ public class AuthenticationManager {
 
     private Map<String, String> loadUsers() {
         Map<String, String> users = new HashMap<>();
+
         try {
-            Files.lines(Paths.get(USER_FILE)).forEach(line -> {
-                String[] parts = line.split(",");
-                users.put(parts[0], parts[1]);
-            });
+            Path path = Paths.get(USER_FILE);
+            if (!Files.exists(path)) {
+                Files.createFile(path);
+            }
+
+            // Use try-with-resources to ensure the stream is closed
+            try (var linesStream = Files.lines(path)) {
+                linesStream.forEach(line -> {
+                    String[] parts = line.split(",");
+                    users.put(parts[0], parts[1]);
+                });
+            }
         } catch (IOException e) {
-            e.printStackTrace();
+            logger.severe("Error reading users from file: " + e.getMessage());
         }
+
         return users;
     }
 
@@ -54,11 +66,15 @@ public class AuthenticationManager {
             if (!Files.exists(path)) {
                 Files.createFile(path);
             }
-            Files.write(path, () -> userCredentials.entrySet().stream()
-                            .map(entry -> entry.getKey() + "," + entry.getValue()).iterator(),
-                    StandardOpenOption.TRUNCATE_EXISTING);
+
+            // Convert the map entries to lines and write them to the file
+            String content = userCredentials.entrySet().stream()
+                    .map(entry -> entry.getKey() + "," + entry.getValue())
+                    .collect(Collectors.joining(System.lineSeparator()));
+
+            Files.writeString(path, content, StandardOpenOption.TRUNCATE_EXISTING);
         } catch (IOException e) {
-            e.printStackTrace();
+            logger.severe("Error writing users to file: " + e.getMessage());
         }
     }
 }
